# BootX

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.zig  dub.json  dub.settings.json  x86_64-unknown-uefi.json  zig.mod
.cargo/: config.toml
.github/workflows/: run_lints.yml
Source/: Application.d  FWLauncher.d  main.zig
Source/Helpers/: OutputString.d  UEFIAssert.d  helpers.zig
src/: main.rs  main.zig
src/helpers/: assert.zig  buffersource.zig  conoutwriter.zig  fb.rs  file.rs  findCfgTable.zig  helpers.zig  kaboom.rs  load_file.rs  loadfile.zig  mem.rs  mod.rs  paging.rs  panic.zig  parse_elf.rs  setup.rs
