[package]
name = "fwlauncher"
version = "0.1.0"
authors = ["VisualDevelopment"]
publish = false
edition = "2021"

[profile.dev]
lto = "thin"

[profile.release]
lto = true

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.14.0", features = ["exts", "logger"] }
uefi-services = "0.11.0"
log = { version = "0.4.14", default-features = false }
goblin = { version = "0.4.3", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
amd64 = { path = "../AMD64" }
acpi = { path = "../ACPI" }
kaboom = { path = "../Kaboom" }
