[package]
name = "fwlauncher"
version = "0.1.0"
authors = ["VisualDevelopment"]
publish = false
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.16.0", features = ["exts", "logger"] }
uefi-services = "0.13.0"
log = { version = "0.4.17", default-features = false, features = [
    "max_level_trace",
    "release_max_level_info",
] }
goblin = { version = "0.5.1", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
amd64 = { path = "../AMD64" }
acpi = { path = "../ACPI" }
kaboom = { path = "../Kaboom" }
