[package]
name = "bootx"
version = "0.1.0"
authors = ["ChefKiss Inc"]
publish = false
edition = "2021"

[profile.dev]
lto = "thin"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "bootx64"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.16.0", features = ["exts", "logger"] }
uefi-services = "0.13.0"
log = { version = "0.4.17", default-features = false, features = [
    "release_max_level_debug",
    "max_level_trace",
] }
goblin = { version = "0.5.2", default-features = false, features = [
    "elf32",
    "elf64",
    "endian_fd",
] }
amd64 = { path = "../AMD64Lib" }
acpi = { path = "../ACPILib" }
sulphur_dioxide = { path = "../SulphurDioxide" }
